<resources>
    <string name="app_name">Note It</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="archive">Archive</string>
    <string name="zero">0</string>
    <string name="todo">TODO</string>
    <string name="reminder">Reminder</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="view">View</string>
    <string name="color_id">color_id</string>
    <string name="default_color">default_color_shared_pref</string>
    <string name="change_color">Change Color</string>
    <string name="all_notes">All notes</string>
    <string name="general">General</string>
    <string name="work">Work</string>
    <string name="personal">Personal</string>
    <string name="view_by">View By</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="details">Details</string>
    <string name="edited_sun_9_oct_4_54_pm">Edited: Sun 9 Oct 4:54 pm</string>
    <string name="what_s_up">What\'s up?</string>
    <string name="header">Header</string>
    <string name="note_archived">Note Archived</string>
    <string name="note_deleted">Note Deleted</string>
    <string name="note_archived_plural">Notes Archived</string>
    <string name="note_deleted_plural">Notes Deleted</string>
    <string name="note_restored">Note Restored</string>
    <string name="notes_restored">Notes Restored</string>
    <string name="undo">Undo</string>
    <string name="share">Share</string>
    <string name="check">Check</string>
    <string name="uncheck">Uncheck</string>
    <string name="edited">Edited: %s</string>
</resources>