<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="category"
            type="com.example.noteapp.cleannoteapp.models.enums.ColorCategory" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/view_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/change_color"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/all_notes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/color_bg"
                        android:baselineAligned="false"
                        android:colorCategoryOnClick="@{category.ALL_NOTES}"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:padding="15dp"
                        android:visibility="visible">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/all_notes" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_weight="1"
                            android:text="@string/all_notes"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/selected_all"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_baseline_check_24"
                            android:visibility="gone" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/color_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/colors_corners"
                        android:backgroundTint="@color/color_one_secondary"
                        android:baselineAligned="false"
                        android:colorCategoryOnClick="@{category.OPTION_ONE}"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:padding="15dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@color/color_one_primary" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_weight="1"
                            android:text="@string/general"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/selected_one"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription=""
                            android:src="@drawable/ic_baseline_check_24"
                            android:visibility="gone" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/color_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/colors_corners"
                        android:backgroundTint="@color/color_two_secondary"
                        android:baselineAligned="false"
                        android:colorCategoryOnClick="@{category.OPTION_TWO}"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:padding="15dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@color/color_two_primary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_weight="1"
                            android:text="@string/work"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/selected_two"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_baseline_check_24"
                            android:visibility="gone" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/color_three"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/colors_corners"
                        android:backgroundTint="@color/color_three_secondary"
                        android:baselineAligned="false"
                        android:colorCategoryOnClick="@{category.OPTION_THREE}"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:padding="15dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@color/color_three_primary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_weight="1"
                            android:text="@string/personal"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/selected_three"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_baseline_check_24"
                            android:visibility="gone" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/color_four"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/colors_corners"
                        android:backgroundTint="@color/color_four_secondary"
                        android:baselineAligned="false"
                        android:colorCategoryOnClick="@{category.OPTION_FOUR}"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:padding="15dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@color/color_four_primary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_weight="1"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/selected_four"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_baseline_check_24"
                            android:visibility="gone" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/color_five"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/colors_corners"
                        android:backgroundTint="@color/color_five_secondary"
                        android:baselineAligned="false"
                        android:colorCategoryOnClick="@{category.OPTION_FIVE}"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:padding="15dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@color/color_five_primary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_weight="1"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/selected_five"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_baseline_check_24"
                            android:visibility="gone" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/color_six"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/colors_corners"
                        android:backgroundTint="@color/color_six_secondary"
                        android:baselineAligned="false"
                        android:colorCategoryOnClick="@{category.OPTION_SIX}"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:padding="15dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@color/color_six_primary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_weight="1"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/selected_six"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_baseline_check_24"
                            android:visibility="gone" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/color_seven"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/colors_corners"
                        android:backgroundTint="@color/color_seven_secondary"
                        android:baselineAligned="false"
                        android:colorCategoryOnClick="@{category.OPTION_SEVEN}"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:padding="15dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@color/color_seven_primary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_weight="1"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/selected_seven"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_baseline_check_24"
                            android:visibility="gone" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/color_eight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/color_bg"
                        android:baselineAligned="false"
                        android:colorCategoryOnClick="@{category.OPTION_EIGHT}"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:padding="15dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@color/color_eight_primary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_weight="1"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/selected_eight"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_baseline_check_24"
                            android:visibility="gone" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>